# jsonapi-client

./: .gitignore  CHANGES.rst  Dockerfile  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
src/jsonapi_client/: __init__.py  common.py  resourceobject.py  session.py
tests/: test_client.py
